package trab01;

public enum DiaSemana {
    SEGUNDA, TERCA, QUARTA, QUINTA, SEXTA
}
